Completed basic composite tree model with the following classes: - Node (base abstract node class) - CompositeNode (abstract class adding composite behaviour to node) - CompositeTree (concrete class adding no additional behaviour to CompositeNode)

--- a/Orbit/Orbit.vcxproj
+++ b/Orbit/Orbit.vcxproj
@@ -12,10 +12,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game\CompositeTree\CompositeNode.h" />
+    <ClInclude Include="include\Game\CompositeTree\CompositeTree.h" />
     <ClInclude Include="include\Game\CompositeTree\Node.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game\CompositeTree\CompositeNode.cpp" />
+    <ClCompile Include="src\Game\CompositeTree\CompositeTree.cpp" />
     <ClCompile Include="src\Game\CompositeTree\Node.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
