--- a/Orbit/Orbit.vcxproj
+++ b/Orbit/Orbit.vcxproj
@@ -19,10 +19,10 @@
     <ClInclude Include="include\Input\Window.h" />
     <ClInclude Include="include\Input\WindowLibrary.h" />
     <ClInclude Include="include\Render\Renderer.h" />
+    <ClInclude Include="include\Render\VulkanBase.h" />
     <ClInclude Include="include\Render\VulkanGraphicsPipeline.h" />
     <ClInclude Include="include\Render\VulkanImage.h" />
     <ClInclude Include="include\Render\VulkanMemoryBuffer.h" />
-    <ClInclude Include="include\Render\VulkanModelRenderer.h" />
     <ClInclude Include="include\Render\VulkanRenderer.h" />
     <ClInclude Include="include\Render\VulkanUtils.h" />
     <ClInclude Include="include\Task\TaskRunner.h" />
@@ -35,10 +35,10 @@
     <ClCompile Include="src\Input\GLFWWindowLibrary.cpp" />
     <ClCompile Include="src\Input\Window.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Render\VulkanBase.cpp" />
     <ClCompile Include="src\Render\VulkanGraphicsPipeline.cpp" />
     <ClCompile Include="src\Render\VulkanImage.cpp" />
     <ClCompile Include="src\Render\VulkanMemoryBuffer.cpp" />
-    <ClCompile Include="src\Render\VulkanModelRenderer.cpp" />
     <ClCompile Include="src\Render\VulkanRenderer.cpp" />
     <ClCompile Include="src\Render\VulkanUtils.cpp" />
     <ClCompile Include="src\Task\TaskRunner.cpp" />
