--- a/Orbit/Orbit.vcxproj.filters
+++ b/Orbit/Orbit.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClInclude Include="include\Render\VulkanUtils.h">
       <Filter>Header Files\Render</Filter>
     </ClInclude>
-    <ClInclude Include="include\Render\VulkanMemoryBuffer.h">
-      <Filter>Header Files\Render</Filter>
-    </ClInclude>
     <ClInclude Include="include\Render\VulkanImage.h">
       <Filter>Header Files\Render</Filter>
     </ClInclude>
@@ -96,6 +93,9 @@
     <ClInclude Include="include\Render\VulkanBase.h">
       <Filter>Header Files\Render</Filter>
     </ClInclude>
+    <ClInclude Include="include\Render\VulkanBuffer.h">
+      <Filter>Header Files\Render</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -119,9 +119,6 @@
     <ClCompile Include="src\Render\VulkanUtils.cpp">
       <Filter>Source Files\Render</Filter>
     </ClCompile>
-    <ClCompile Include="src\Render\VulkanMemoryBuffer.cpp">
-      <Filter>Source Files\Render</Filter>
-    </ClCompile>
     <ClCompile Include="src\Render\VulkanImage.cpp">
       <Filter>Source Files\Render</Filter>
     </ClCompile>
@@ -138,6 +135,9 @@
       <Filter>Source Files\Input</Filter>
     </ClCompile>
     <ClCompile Include="src\Render\VulkanBase.cpp">
+      <Filter>Source Files\Render</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Render\VulkanBuffer.cpp">
       <Filter>Source Files\Render</Filter>
     </ClCompile>
   </ItemGroup>
