--- a/OrbitCore/OrbitCore.vcxproj
+++ b/OrbitCore/OrbitCore.vcxproj
@@ -75,7 +75,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\libraries\glm;include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\libraries\stb-master;$(SolutionDir)..\libraries\glm;include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>CORE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
@@ -106,7 +106,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\libraries\glm;include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\libraries\stb-master;$(SolutionDir)..\libraries\glm;include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>CORE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -123,6 +123,7 @@
     <ClCompile Include="src\Input\Input.cpp" />
     <ClCompile Include="src\Render\Model.cpp" />
     <ClCompile Include="src\Render\Projection.cpp" />
+    <ClCompile Include="src\Render\Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game\CompositeTree\CameraNode.h" />
@@ -138,6 +139,7 @@
     <ClInclude Include="include\Input\Key.h" />
     <ClInclude Include="include\Render\Model.h" />
     <ClInclude Include="include\Render\Projection.h" />
+    <ClInclude Include="include\Render\Texture.h" />
     <ClInclude Include="include\Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
