--- a/OrbitCore/OrbitCore.vcxproj.filters
+++ b/OrbitCore/OrbitCore.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\Game\Factories\NodeFactory.cpp">
       <Filter>Source Files\Game\Factories</Filter>
     </ClCompile>
+    <ClCompile Include="src\Render\Texture.cpp">
+      <Filter>Source Files\Render</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game\MainModule.h">
@@ -112,6 +115,9 @@
     </ClInclude>
     <ClInclude Include="include\Game\CompositeTree\Visitor.h">
       <Filter>Header Files\Game\CompositeTree</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Render\Texture.h">
+      <Filter>Header Files\Render</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
